--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -13,14 +13,14 @@ import logo from '../assets/images/logo.png';
   />
   <div class="absolute inset-0 bg-black/30"></div>
   
-  <div class="flex flex-col items-center mt-[100px] px-10 z-10 md:px-20">
+  <div class="prose flex flex-col items-center mt-[100px] px-10 z-10 md:px-20">
     <Image
         src={logo} 
         alt="Agrutopia logo image" 
         class="w-[400px]"
     />
     
-    <h2 class="text-2xl text-center font-serif tracking-wide text-white mt-4 md:text-4xl">
+    <h2 class="text-center font-serif tracking-wide text-white mt-4 md:text-4xl">
       Embarcando un viaje hacia la sostenibilidad y la agroecología en Colombia.
     </h2>
     <p class="text-center text-white mt-4 md:text-sm">
